[project]
name = "graphout"
version = "1.0.2.5"
description = "A tool to capture, measure and plot printed data"
authors = [{ name = "Petras Purlys", email = "petras.purlys@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "tabulate>=0.10.0",
    "seaborn>=0.13.2",
]
license = "MIT"
license-files = [
    "LICENSE.txt",
]

[project.urls]
Homepage = "https://github.com/PetrasPurlys/graphout"

[project.scripts]
graphout = "graphout.__main__:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "pytest>=9.0.2,<10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
default-groups = "all"
